--- a/app/templates/screens/index.html
+++ b/app/templates/screens/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <!-- Pagination button -->
-        <div class="flex justify-center items-center space-x-5 py-20">
+        <!-- <div class="flex justify-center items-center space-x-5 py-20">
             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg" class="cursor-pointer">
                 <path d="M7.01874 13L1.13577 7L7.01874 1" stroke="#adadad" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
@@ -97,6 +97,7 @@
                 <path d="M1.98123 1L7.8642 7L1.98123 13" stroke="#313131" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 
-        </div>
+        </div> -->
+        {{pagination.links}}
     </main>
 {% endblock %}
