--- a/app/templates/screens/post.html
+++ b/app/templates/screens/post.html
@@ -32,7 +32,7 @@
                         >
                     </div>
                 </div>
-                <div class="text-soft-black">
+                <div class="text-soft-black mt-10">
                     {{article.content|safe}}
                 </div>
             </div>
