add dynamic list on most viewed and category

--- a/app/templates/components/article_card.html
+++ b/app/templates/components/article_card.html
@@ -1,4 +1,4 @@
-<div class="w-[350px] my-8 flex flex-col shadow-md rounded-lg">
+<div class="w-full lg:w-[350px] my-8 flex flex-col shadow-md rounded-lg">
     <div class="aspect-h-9 aspect-w-16">
         <img
             src="{{article.cover}}"
