--- a/app/templates/components/article_card.html
+++ b/app/templates/components/article_card.html
@@ -6,7 +6,13 @@
         />
     </div>
     <div class="flex flex-col h-full px-5 pt-0 pb-5">
-        {% include 'components/tag.html' %}
+        <div class="flex flex-wrap">
+            {% if article.tags %}
+                {% for tag in article.tags%}
+                    {% include "components/tag.html" %}
+                {% endfor %}
+            {% endif %}
+        </div>
         <h1 class="text-active-black font-bold text-xl mt-3">
             {{article.title}}
         </h1>
