--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -28,18 +28,28 @@
         </ul>
         <div>
             {% if user %}
-            <form action="/logout" method="post">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                <button
-                    class="bg-purple text-white font-semibold px-5 py-2 rounded-lg"
-                >
-                    Logout
-                </button>
-            </form>
+            <div class="relative flex flex-col" id="dropdown">
+                <div class="w-[50px] h-[50px] flex-end">
+                    <img
+                        src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        alt="avatar"
+                        class="object-center object-cover rounded-full"
+                    />
+                </div>
+                <div class="absolute right-0 top-0 mt-20 bg-white py-3 pl-5 pr-10 flex flex-col rounded-lg border-2 border-[#efefef] hidden" id="dropdown-menu">
+                    <a class="text-soft-black p-3 font-medium hover:text-purple" href="/admin/dashboard">Dashboard</a>
+                    <form action="/logout" method="post" >
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                        <button type="submit" class="text-soft-black font-medium p-3 hover:text-purple">
+                            Logout
+                        </button>
+                    </form>
+                </div>
+            </div>
             {% else %}
             <form action="/login">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                <button
+                <button type="submit"
                     class="bg-purple text-white font-semibold px-5 py-2 rounded-lg"
                 >
                     Login
@@ -49,3 +59,10 @@
         </div>
     </div>
 </nav>
+<script>
+    const dropdown = document.querySelector('#dropdown')
+    const dropdownMenu = document.querySelector("#dropdown-menu")
+    dropdown.addEventListener('click', function(e){
+        dropdownMenu.classList.toggle('hidden')
+    })
+</script>
