--- a/app/templates/components/sidepanel.html
+++ b/app/templates/components/sidepanel.html
@@ -1,4 +1,4 @@
-<div class="w-full lg:w-[362px] py-5 px-4 md:px-8 sticky top-[128px] self-start ">
+<div class="w-full lg:w-[362px] py-5 pl-4 md:pl-8 sticky top-[128px] self-start ">
     {% if type =='post'%}
         <div>
             <h1 class="text-2xl text-active-black font-bold">More from this author</h1>
@@ -30,25 +30,9 @@
         <div class="mt-10">
             <h1 class="text-2xl text-active-black font-bold">Tag</h1>
             <div class="flex flex-wrap mt-3">
-                {% with name="Tips" %}
-                    {% include 'components/tag.html'%}
-                {% endwith %}
-
-                {% with name="Nature" %}
-                    {% include 'components/tag.html'%}
-                {% endwith %}
-
-                {% with name="JS" %}
-                    {% include 'components/tag.html'%}
-                {% endwith %}
-
-                {% with name="Python" %}
-                    {% include 'components/tag.html'%}
-                {% endwith %}
-
-                {% with name="Cheatsheet" %}
-                    {% include 'components/tag.html'%}
-                {% endwith %}
+                {% for tag in all_tags %}
+                    {% include 'components/tag.html' %}
+                {% endfor %}
             </div>
         </div>
     {% endif %}
