--- a/app/templates/components/tag.html
+++ b/app/templates/components/tag.html
@@ -1,5 +1,5 @@
 <span
-    class="self-start text-[#38B419] bg-[#38B4191a] p-2 font-medium mt-3 inline-block rounded-lg mx-2"
+    class="self-start text-[#b45adf] bg-[#b45adf1a] p-2 font-medium mt-3 inline-block rounded-lg mx-2 text-sm"
 >
-    {{ name }}
+    #{{ tag.name }}
 </span>
