--- a/app/templates/screens/post.html
+++ b/app/templates/screens/post.html
@@ -1,19 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
     {% include "components/header.html" %}
-    <main class="w-4/5 mx-auto mt-[96px] py-10">
+    <main class="md:w-4/5 mx-auto mt-[96px] py-10">
         <!-- Main Content and Sidepanel -->
-        <div class="flex ">
-            <div class="flex-1 py-5 pl-10 pr-10">
+        <div class=" flex flex-col lg:flex-row">
+            <div class="flex-1 py-5 px-5 md:px-10">
                 <div class="aspect-w-16 aspect-h-9 flex flex-col after:block">
                     <img
                         class="w-full h-full object-center object-cover rounded-lg"
                         src="{{article.cover}}"
                     />
                 </div>
-                {% with name="Nature"%}
-                    {% include "components/tag.html" %}
-                {% endwith %}
+                <div class="flex flex-wrap">
+                    {% if article.tags %}
+                        {% for tag in article.tags%}
+                            {% include "components/tag.html" %}
+                        {% endfor %}
+                    {% endif %}
+                </div>
                 <h1 class="text-active-black font-bold text-4xl mt-5">
                     {{article.title}}
                 </h1>
@@ -32,7 +36,7 @@
                         >
                     </div>
                 </div>
-                <div class="text-soft-black mt-10">
+                <div class="text-soft-black mt-10" id="detail-content">
                     {{article.content|safe}}
                 </div>
             </div>
