--- a/app/templates/screens/tag.html
+++ b/app/templates/screens/tag.html
@@ -16,7 +16,7 @@
             </ul>
 
             <div class="grid grid-cols-fit auto-flow-col justify-items-center gap-5">
-                {% for i in range(5) %}
+                {% for article in articles %}
                     {% include 'components/article_card.html'%}
                 {% endfor %}
             </div>
