--- a/app/templates/components/tag.html
+++ b/app/templates/components/tag.html
@@ -1,5 +1,7 @@
 <span
     class="self-start text-[#b45adf] bg-[#b45adf1a] p-2 font-medium mt-3 inline-block rounded-lg mx-2 text-sm"
 >
+<a href="/tags/{{tag.name}}">
     #{{ tag.name }}
+</a>
 </span>
