--- a/app/templates/screens/admin/edit_article.html
+++ b/app/templates/screens/admin/edit_article.html
@@ -45,6 +45,13 @@
                     {{form.category(class_="bg-[#efefef] px-5 py-2 outline-none text-soft-black mt-3 rounded-md self-start")}}
                     {{form.content.label(class_="text-xl font-bold text-active-black mt-5")}}
                     {{form.content(class_="bg-[#efefef] px-5 py-2 outline-none text-soft-black mt-3 rounded-md")}}
+                    <label class="text-xl font-bold text-active-black mt-5">
+                        Tags
+                    </label>
+                    <div class="flex px-5 py-2 mt-3 rounded-md">
+                        <div class="tag-list flex py-2 space-x-3"></div>
+                        <input class="bg-transparent outline-none text-soft-black px-3 " placeholder="Up to 4 tag" id="tag-field" />
+                    </div>
                     {{form.postedAt.label(class_="text-xl font-bold text-active-black mt-5")}}
                     {{form.postedAt(class_="bg-[#efefef] px-5 py-2 outline-none text-soft-black mt-3 rounded-md min-w-0 self-start")}}
                     <button type="submit" class="inline-block self-start bg-purple text-white font-bold px-5 py-2 rounded-md mt-10">Publish</button>
@@ -53,5 +60,54 @@
                 {{ ckeditor.config(name='content') }}
             </div>
         </div>
+
+        <script>
+            window.addEventListener('DOMContentLoaded', e => {
+                const articleTags = {{ tags|safe }};
+
+                articleTags.forEach(tag => {
+                    let item = document.createElement('div')
+                    item.innerHTML= `
+                    <span class="bg-[#645ADF1A] rounded-md px-3 py-2 text-soft-black"><span class="text-purple">#</span>${tag.name}</span>
+                    <input type="hidden" value=${tag.name} name="tags[]" type="text" />
+                    `
+                    document.querySelector(".tag-list").appendChild(item)
+                })
+
+                document.querySelector("#tag-field").addEventListener("keyup",function(e){
+                    if(e.keyCode == 8 && e.target.value == "" && articleTags.length > 0){
+                        let tagList = document.querySelector(".tag-list");
+                        tagList.removeChild(tagList.lastElementChild);
+                        articleTags.splice(-1);
+                        return;
+                    }
+    
+                    if(articleTags.length>=4){
+                        e.target.value="";
+                        return;
+                    }
+    
+                    let keyCode = e.keyCode? e.keyCode : e.which;
+                    if(keyCode != 32){
+                        return;
+                    }
+    
+                    let tag = e.target.value.toLowerCase().trim()
+                    if(tag.length < 1 || articleTags.includes(tag)){
+                        e.target.value="";
+                        return;
+                    }
+    
+                    let index = articleTags.push(tag)
+                    let item = document.createElement('div')
+                    item.innerHTML= `
+                        <span class="bg-[#645ADF1A] rounded-md px-3 py-2 text-soft-black"><span class="text-purple">#</span>${tag}</span>
+                        <input type="hidden" value=${tag} name="tags[]" type="text" />
+                    `
+                    document.querySelector(".tag-list").appendChild(item)
+                    e.target.value = ""
+                })
+            })
+        </script>
     </main>
 {% endblock %}
