--- a/app/templates/screens/tag.html
+++ b/app/templates/screens/tag.html
@@ -23,21 +23,6 @@
                 {% endfor %}
             </div>
         </div>
-
-                <!-- Pagination button -->
-                <div class="flex justify-center items-center space-x-5 py-20">
-                    <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg" class="cursor-pointer">
-                        <path d="M7.01874 13L1.13577 7L7.01874 1" stroke="#adadad" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                    <button class="text-white bg-purple w-10 h-10 rounded-lg font-bold text-center">1</button>
-                    <button class="w-10 h-10 rounded-lg text-soft-black text-center font-bold">2</button>
-                    <button class="w-10 h-10 rounded-lg text-soft-black text-center font-bold">3</button>
-                    <button class="w-10 h-10 rounded-lg text-soft-black text-center font-bold">4</button>
-                    <button class="w-10 h-10 rounded-lg text-soft-black text-center font-bold">5</button>
-                    <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg" class="cursor-pointer">
-                        <path d="M1.98123 1L7.8642 7L1.98123 13" stroke="#313131" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        
-                </div>
+        {{pagination.links}}
     </main>
 {% endblock %}
