--- a/app/templates/screens/index.html
+++ b/app/templates/screens/index.html
@@ -20,6 +20,7 @@
         <!-- Main Content and Sidepanel -->
         <div class="flex flex-col lg:flex-row">
             <div class="flex-1 py-5 md:px-10">
+                {% if articles[0] %}
                 <div class="shadow-md rounded-lg">
                     <div class="aspect-w-16 aspect-h-9 flex flex-col after:block">
                         <img
@@ -29,7 +30,7 @@
                     </div>
                     <div class="px-5 pb-5">
                         {% if articles[0].tags %}
-                            {% for tag in article.tags%}
+                            {% for tag in articles[0].tags%}
                                 {% include "components/tag.html" %}
                             {% endfor %}
                         {% endif %}
@@ -80,6 +81,7 @@
                         </div>
                     </div>  
                 </div>
+                {% endif %}
 
                 <div class="flex flex-wrap justify-between mt-10">
                     {% for article in articles %}
