--- a/app/templates/components/sidepanel.html
+++ b/app/templates/components/sidepanel.html
@@ -30,7 +30,7 @@
         <div class="mt-10">
             <h1 class="text-2xl text-active-black font-bold">Tag</h1>
             <div class="flex flex-wrap mt-3">
-                {% for tag in all_tags %}
+                {% for tag in top_tags %}
                     {% include 'components/tag.html' %}
                 {% endfor %}
             </div>
