--- a/app/templates/components/admin/header.html
+++ b/app/templates/components/admin/header.html
@@ -1,6 +1,6 @@
 <header class="w-full flex justify-between border-b-2 border-[#efefef]">
     <div class="w-full md:w-4/5 flex  mx-auto h-24 items-center justify-between">
-        <h1 class="text-xl font-medium text-soft-gray">Welcome, Sony</h1>
+        <h1 class="text-xl font-medium text-soft-gray">Welcome, {{author.name}}</h1>
         <div class="flex items-center space-x-5" id="dropdown">
             <div class="w-[50px] h-[50px] flex-end">
                 <img
