--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -1,4 +1,4 @@
-<nav class="w-full shadow-md fixed top-0 bg-white z-10">
+<nav class="w-full shadow-md fixed top-0 bg-white z-10 hidden md:block">
     <div class="h-[96px] w-4/5 mx-auto flex justify-between items-center">
         <div class="h-full py-5">
             <a href="/">
