--- a/app/templates/screens/post.html
+++ b/app/templates/screens/post.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     {% include "components/header.html" %}
+    {% include 'components/small_header.html' %}
     <main class="md:w-4/5 mx-auto mt-[96px] py-10">
         <!-- Main Content and Sidepanel -->
         <div class=" flex flex-col lg:flex-row">
