--- a/app/templates/components/searchbar.html
+++ b/app/templates/components/searchbar.html
@@ -1,5 +1,5 @@
 <form
-    class="flex items-center bg-form-bg w-3/5 max-w-[488px] mx-auto p-3 px-5 rounded-md"
+    class="flex items-center bg-form-bg w-full md:w-3/5 max-w-[488px] mx-auto p-3 px-5 rounded-md"
 >
     <label for="search">
         <svg
