--- a/app/templates/screens/about.html
+++ b/app/templates/screens/about.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 {% with active='about'%}
-{% include 'components/header.html'%}
+    {% include 'components/header.html'%}
+    {% include 'components/small_header.html' %}
 {% endwith %}
 <main class="w-4/5 mx-auto">
     <div class="mt-[96px] py-10">
