--- a/app/templates/screens/archive.html
+++ b/app/templates/screens/archive.html
@@ -2,6 +2,7 @@
 {% block content %}
     {% with active='category'%}
         {% include 'components/header.html'%}
+        {% include 'components/small_header.html' %}
     {% endwith %}
     <main class="w-11/12 lg:w-4/5 mx-auto">
         <div class="mt-[96px] py-10">
