--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Blog | Home</title>
+        {% block title%}
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='images/vectors/b.svg')}}">
         <script src="https://cdn.tailwindcss.com?plugins=aspect-ratio"></script>
         <style type="text/tailwindcss">
