--- a/app/templates/components/admin/header.html
+++ b/app/templates/components/admin/header.html
@@ -1,14 +1,16 @@
 <header class="w-full flex justify-between border-b-2 border-[#efefef]">
     <div class="w-full md:w-4/5 flex  mx-auto h-24 items-center justify-between">
-        <h1 class="text-xl font-medium text-soft-gray">Welcome, {{author.name}}</h1>
-        <div class="flex items-center space-x-5" id="dropdown">
-            <div class="w-[50px] h-[50px] flex-end">
-                <img
-                    src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
-                    alt="avatar"
-                    class="object-center object-cover rounded-full"
-                />
-            </div>
+        <div class="h-full py-5 flex items-center justify-center md:hidden" id="hamburger">
+            <svg width="28" height="20" viewBox="0 0 14 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H13M1 5H13M1 9H13" stroke="#212135" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
         </div>
+        <h1 class="font-medium text-soft-gray">Welcome, {{author.name}}</h1>
     </div>
 </header>
+<script>
+    const hamburger = document.querySelector("#hamburger")
+    hamburger.addEventListener('click', function(e){
+        document.querySelector("#responsive-admin-sidebar").classList.toggle("hidden")
+    })
+</script>
