--- a/app/templates/screens/archive.html
+++ b/app/templates/screens/archive.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title%}
+    <title>Archive | Blog</title>
+{% endblock %}
 {% block content %}
     {% with active='category'%}
         {% include 'components/header.html'%}
