--- a/app/templates/screens/index.html
+++ b/app/templates/screens/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title%}
+    <title>Home | Blog</title>
+{% endblock %}
 {% block content %}
     {% with active="home" %}
     {% include 'components/small_header.html' %}
