--- a/app/templates/screens/about.html
+++ b/app/templates/screens/about.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title%}
+    <title>About | Blog</title>
+{% endblock %}
 {% block content %}
 {% with active='about'%}
     {% include 'components/header.html'%}
