--- a/app/templates/screens/error.html
+++ b/app/templates/screens/error.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title%}
+    <title>404 Not Found | Blog</title>
+{% endblock %}
 {% block content %}
 
 <div class="flex w-screen h-screen">
