--- a/app/templates/screens/login.html
+++ b/app/templates/screens/login.html
@@ -1,4 +1,7 @@
 {% extends 'base.html'%}
+{% block title%}
+    <title>Login | Blog</title>
+{% endblock %}
 {% block content%}
     <div>
         <div class="flex items-center justify-center h-screen relative">
