--- a/app/templates/screens/tag.html
+++ b/app/templates/screens/tag.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title%}
+    <title>Tag | Blog</title>
+{% endblock %}
 {% block content %}
     {% with active='tag'%}
         {% include 'components/header.html'%}
