--- a/app/templates/screens/index.html
+++ b/app/templates/screens/index.html
@@ -13,12 +13,11 @@
                 More Than Just Personal Blog
             </h1>
             <p
-                class="font-medium mt-5 mb-16 text-lg md:text-xl w-4/5 max-w-[720px] mx-auto text-soft-gray text-center"
+                class="font-medium mt-10 mb-16 text-lg md:text-xl w-4/5 max-w-[720px] mx-auto text-soft-gray text-center"
             >
-                We will help you find the things you want. Just go to the search bar
-                below and search for things you want
+                We will help you find the things you want
             </p>
-            {% include "components/searchbar.html" %}
+            <!-- {% include "components/searchbar.html" %} -->
         </div>
 
         <!-- Main Content and Sidepanel -->
