--- a/app/templates/screens/index.html
+++ b/app/templates/screens/index.html
@@ -17,7 +17,7 @@
             >
                 We will help you find the things you want
             </p>
-            <!-- {% include "components/searchbar.html" %} -->
+            {% include "components/searchbar.html" %}
         </div>
 
         <!-- Main Content and Sidepanel -->
