--- a/app/templates/screens/tag.html
+++ b/app/templates/screens/tag.html
@@ -13,9 +13,9 @@
                 Tag
             </h1>
             <ul class="flex justify-center space-x-10 py-10 items-center flex-wrap w-full">
-                <li class="font-bold text-purple bg-[#645adf1a] py-2 px-5 rounded-md"><a href="/tags">All</a></li>
+                <li class="font-bold text-purple bg-[#645adf1a] py-2 px-5 m-3 rounded-md"><a href="/tags">All</a></li>
                 {% for tag in tags %}
-                    <li>
+                    <li class="font-bold text-purple bg-[#645adf1a] py-2 px-5 my-3 rounded-md">
                         <a href="/tags/{{tag.name}}">#{{tag.name}}</a>
                     </li>
                 {% endfor %}
