--- a/app/templates/screens/archive.html
+++ b/app/templates/screens/archive.html
@@ -3,10 +3,8 @@
     <title>Archive | Blog</title>
 {% endblock %}
 {% block content %}
-    {% with active='category'%}
         {% include 'components/header.html'%}
         {% include 'components/small_header.html' %}
-    {% endwith %}
     <main class="w-11/12 lg:w-4/5 mx-auto">
         <div class="mt-[96px] py-10">
             <h1 class="font-bold text-4xl text-active-black">
@@ -15,7 +13,9 @@
 
             <div class="grid grid-cols-fit auto-flow-col  gap-5">
                 {% for article in articles %}
+                {% with screen='archive'%}
                     {% include 'components/article_card.html'%}
+                {% endwith %}
                 {% endfor %}
             </div>
         </div>
