--- a/app/templates/screens/post.html
+++ b/app/templates/screens/post.html
@@ -34,7 +34,7 @@
                         />
                     </div>
                     <div class="flex flex-col space-y-1">
-                        <span class="font-medium text-soft-black">By: {{article.author.username}}</span>
+                        <span class="font-medium text-soft-black">By: {{article.author.name}}</span>
                         <span class="font-medium text-sm text-soft-gray"
                             >{{article.posted_at}}</span
                         >
